# Request-maker

./: .gitignore  Dockerfile  docker-compose.yml  main.py  prompts.py  pyproject.toml  test_failover.py
api/: endpoints.py
schemas/: product.py
services/: gemini_service.py
